:green_heart: Allow mcp publish failure

--- a/.github/actions/github-registry/action.yml
+++ b/.github/actions/github-registry/action.yml
@@ -72,4 +72,4 @@ runs:
         mcp_publisher="mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz"
         curl -L "https://github.com/modelcontextprotocol/registry/releases/latest/download/${mcp_publisher}" | tar xz mcp-publisher
         ./mcp-publisher login github-oidc
-        ./mcp-publisher publish
+        ./mcp-publisher publish || echo "Failed to publish MCP server, but the image has been pushed successfully"
