--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           distribution: goreleaser
-          args: release --clean --verbose
+          args: release --clean
       - name: Upload artifact
         uses: actions/upload-artifact@v6
         with:
