:recycle: Use extracted cobra-mcp

--- a/cmd/BUILD.bazel
+++ b/cmd/BUILD.bazel
@@ -4,7 +4,6 @@ go_library(
     name = "cmd",
     srcs = [
         "auth.go",
-        "handler.go",
         "mcp.go",
         "root.go",
         "version.go",
@@ -22,8 +21,7 @@ go_library(
     deps = [
         "//pkg",
         "//pkg/auth",
-        "//pkg/utils",
-        "@com_github_modelcontextprotocol_go_sdk//mcp",
+        "@com_github_eat_pray_ai_cobra_mcp//:cobra-mcp",
         "@com_github_savioxavier_termlink//:termlink",
         "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_viper//:viper",
