--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -17,6 +17,7 @@ go_deps.config(
 )
 use_repo(
     go_deps,
+    "com_github_eat_pray_ai_cobra_mcp",
     "com_github_google_jsonschema_go",
     "com_github_jedib0t_go_pretty_v6",
     "com_github_modelcontextprotocol_go_sdk",
